@@ -31,7 +31,6 @@ import uk.gov.hmcts.reform.prl.utils.ElementUtils;
 import java.util.ArrayList;
 import java.util.List;
 import java.util.Optional;
-import java.util.stream.Collectors;
 
 import static java.util.Optional.ofNullable;
 import static uk.gov.hmcts.reform.prl.constants.PrlAppsConstants.APPLICANTS_STATEMENTS;
@@ -68,7 +67,7 @@ public class BundleCreateRequestMapper {
                                                                 String bundleConfigFileName) {
         BundleCreateRequest bundleCreateRequest = BundleCreateRequest.builder()
             .caseDetails(BundlingCaseDetails.builder()
-                .id(caseData.getApplicantName())
+                .bundleName(caseData.getApplicantName())
                 .caseData(mapCaseData(caseData,hearingDetails,
                     bundleConfigFileName))
                 .build())
@@ -90,7 +89,7 @@ public class BundleCreateRequestMapper {
     private BundleHearingInfo mapHearingDetails(Hearings hearingDetails) {
         if (null != hearingDetails && null != hearingDetails.getCaseHearings()) {
             List<CaseHearing> listedCaseHearings = hearingDetails.getCaseHearings().stream()
-                .filter(caseHearing -> LISTED.equalsIgnoreCase(caseHearing.getHmcStatus())).collect(Collectors.toList());
+                .filter(caseHearing -> LISTED.equalsIgnoreCase(caseHearing.getHmcStatus())).toList();
             if (null != listedCaseHearings && !listedCaseHearings.isEmpty()) {
                 List<HearingDaySchedule> hearingDaySchedules = listedCaseHearings.get(0).getHearingDaySchedule();
                 if (null != hearingDaySchedules && !hearingDaySchedules.isEmpty()) {
@@ -132,9 +131,7 @@ public class BundleCreateRequestMapper {
         List<Element<BundlingRequestDocument>> otherDocuments = mapOtherDocumentsFromCaseData(caseData);
         if (null != otherDocuments && !otherDocuments.isEmpty()) {
             allOtherDocuments.addAll(otherDocuments);
-            log.info("****** otherDocuments added" + otherDocuments);
         }
-        log.info("****** allOtherDocuments " + allOtherDocuments);
         return allOtherDocuments;
 
     }
@@ -268,7 +265,6 @@ public class BundleCreateRequestMapper {
         if (null != caseData.getReviewDocuments().getCourtStaffUploadDocListDocTab()
             && !caseData.getReviewDocuments().getCourtStaffUploadDocListDocTab().isEmpty()) {
             List<Element<QuarantineLegalDoc>> courtStaffUploadDocList = caseData.getReviewDocuments().getCourtStaffUploadDocListDocTab();
-            log.info("****** courtStaffUploadDocList" + courtStaffUploadDocList);
             allDocuments.addAll(courtStaffUploadDocList);
         }
         if (null != caseData.getReviewDocuments().getCafcassUploadDocListDocTab()
@@ -281,16 +277,13 @@ public class BundleCreateRequestMapper {
             List<Element<QuarantineLegalDoc>> legalProfUploadDocList = caseData.getReviewDocuments().getLegalProfUploadDocListDocTab();
             allDocuments.addAll(legalProfUploadDocList);
         }
-        log.info("****** allDocuments" + allDocuments);
         List<BundlingRequestDocument> otherBundlingDocuments = new ArrayList<>();
         List<QuarantineLegalDoc>  allDocs = ElementUtils.unwrapElements(allDocuments);
         for (QuarantineLegalDoc doc : allDocs) {
             if (null != mapBundlingRequestDocumentForOtherDocs(doc)) {
                 otherBundlingDocuments.add(mapBundlingRequestDocumentForOtherDocs(doc));
-                log.info("****** This document added to List of otherBundlingDocuments" + doc);
             }
         }
-        log.info("****** Full list of otherBundlingDocuments" + otherBundlingDocuments);
         return ElementUtils.wrapElements(otherBundlingDocuments);
     }
 
